add commented method

--- a/10-loom.conf
+++ b/10-loom.conf
@@ -24,4 +24,5 @@ $ActionQueueType LinkedList       # run asynchronously
 $ActionResumeRetryCount -1        # infinite retries if host is down
 
 # forward then drop the relayed messages
+# action(type=\"omfwd\" Target=\"$SENDING_IP\" Port=\"6514\" Protocol=\"tcp\" Device=\"eth0\")
 *.* @@<CUSTOMER_NAME>-data.loomsystems.com:6514
