--- a/10-loom.conf
+++ b/10-loom.conf
@@ -6,15 +6,11 @@ input(type="imtcp" port="514")
 module(load="imudp") # needs to be done just once
 input(type="imudp" port="514")
 
+$DefaultNetstreamDriverCAFile /etc/rsyslog.d/keys/ca.d/loom.pem
 $ActionSendStreamDriver gtls
-
-$DefaultNetstreamDriverCAFile /etc/rsyslog.d/keys/ca.d/loom.cer
-$DefaultNetstreamDriverCertFile /selfsigned.crt
-$DefaultNetstreamDriverKeyFile /selfsigned.key
-
+$ActionSendStreamDriverMode 1
 $ActionSendStreamDriverAuthMode x509/name
 $ActionSendStreamDriverPermittedPeer *.loomsystems.com
-$ActionSendStreamDriverMode 1
 
 $WorkDirectory /var/spool/rsyslog # where to place spool files
 $ActionQueueFileName fwdRule1     # unique name prefix for spool files
@@ -23,6 +19,4 @@ $ActionQueueSaveOnShutdown on     # save messages to disk on shutdown
 $ActionQueueType LinkedList       # run asynchronously
 $ActionResumeRetryCount -1        # infinite retries if host is down
 
-# forward then drop the relayed messages
-# action(type=\"omfwd\" Target=\"$SENDING_IP\" Port=\"6514\" Protocol=\"tcp\" Device=\"eth0\")
 *.* @@<CUSTOMER_NAME>-data.loomsystems.com:6514
