--- a/10-loom.conf
+++ b/10-loom.conf
@@ -19,5 +19,6 @@ $ActionQueueSaveOnShutdown on     # save messages to disk on shutdown
 $ActionQueueType LinkedList       # run asynchronously
 $ActionResumeRetryCount -1        # infinite retries if host is down
 
+:fromhost-ip, isequal, "<EXCLUDE_IP>" ~
 :fromhost-ip, isequal, "<SEND_IP>" @@<CUSTOMER_NAME>-data.loomsystems.com:6514
 :fromhost-ip, isequal, "<SEND_IP>" ~
