--- a/10-loom.conf
+++ b/10-loom.conf
@@ -20,3 +20,4 @@ $ActionQueueType LinkedList       # run asynchronously
 $ActionResumeRetryCount -1        # infinite retries if host is down
 
 :fromhost-ip, !isequal, "<EXCLUDE_IP>" @@<CUSTOMER_NAME>-data.loomsystems.com:6514
+:fromhost-ip, !isequal, "<EXCLUDE_IP>" ~
